[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/space_background_3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/dogicapixelbold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/dogicapixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/menu_panel.png" type="Texture" id=4]
[ext_resource path="res://Assets/button_small.png" type="Texture" id=5]
[ext_resource path="res://src/Main Menu/Main Menu.gd" type="Script" id=6]
[ext_resource path="res://Assets/Fonts/Pixeltype.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://src/Main Menu/HelpTween.gd" type="Script" id=8]
[ext_resource path="res://Assets/plus_minus_buttons.png" type="Texture" id=9]
[ext_resource path="res://src/Main Menu/Set rounds.gd" type="Script" id=10]
[ext_resource path="res://src/Main Menu/Set round length.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 9 )
region = Rect2( 52, 0, 52, 44 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 52, 44 )

[node name="Main Menu" type="Node2D"]
script = ExtResource( 6 )
_quit_path = NodePath("Buttons/QuitButton")

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 677.0
margin_top = 209.0
margin_right = 861.0
margin_bottom = 373.0
custom_constants/separation = 16
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="Buttons"]
margin_right = 184.0
margin_bottom = 44.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="Label" parent="Buttons/PlayButton"]
margin_left = 62.3661
margin_top = 19.0397
margin_right = 112.366
margin_bottom = 31.0397
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.12549, 0.156863, 0.239216, 1 )
text = "play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetupButton" type="TextureButton" parent="Buttons"]
margin_top = 60.0
margin_right = 184.0
margin_bottom = 104.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="setup" type="Label" parent="Buttons/SetupButton"]
margin_left = 62.3661
margin_top = 19.0397
margin_right = 112.366
margin_bottom = 31.0397
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.12549, 0.156863, 0.239216, 1 )
text = "setup"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpButton" type="TextureButton" parent="Buttons"]
margin_top = 120.0
margin_right = 184.0
margin_bottom = 164.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="help" type="Label" parent="Buttons/HelpButton"]
margin_left = 62.3661
margin_top = 19.0397
margin_right = 112.366
margin_bottom = 31.0397
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.12549, 0.156863, 0.239216, 1 )
text = "help
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="Buttons"]
margin_top = 180.0
margin_right = 184.0
margin_bottom = 224.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Label" parent="Buttons/QuitButton"]
margin_left = 62.3661
margin_top = 19.0397
margin_right = 112.366
margin_bottom = 31.0397
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.12549, 0.156863, 0.239216, 1 )
text = "quit
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Buttons"]

[node name="Title" type="Label" parent="."]
margin_left = 105.0
margin_top = 58.0
margin_right = 737.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 2 )
text = "Asteroids Ear Training"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Title"]

[node name="Help" type="NinePatchRect" parent="."]
visible = false
margin_left = 72.0317
margin_top = 177.375
margin_right = 592.032
margin_bottom = 556.375
texture = ExtResource( 4 )
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Help"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -30.0
margin_bottom = -15.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item2" type="Label" parent="Help/VBoxContainer"]
margin_right = 475.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.12549, 0.156863, 0.239216, 1 )
text = "help"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="HBoxContainer" parent="Help/VBoxContainer"]
margin_top = 37.0
margin_right = 475.0
margin_bottom = 109.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item" type="Label" parent="Help/VBoxContainer/Controls"]
margin_top = 30.0
margin_right = 110.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.12549, 0.156863, 0.239216, 1 )
text = "controls:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="description" type="Label" parent="Help/VBoxContainer/Controls"]
margin_left = 114.0
margin_right = 460.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.12549, 0.156863, 0.239216, 1 )
text = "arrow keys - turn and thrust

space - shoot

R - replay chord"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChordMode" type="HBoxContainer" parent="Help/VBoxContainer"]
margin_top = 134.0
margin_right = 475.0
margin_bottom = 176.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item" type="Label" parent="Help/VBoxContainer/ChordMode"]
margin_top = 15.0
margin_right = 142.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.12549, 0.156863, 0.239216, 1 )
text = "chord mode:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="description" type="Label" parent="Help/VBoxContainer/ChordMode"]
margin_left = 146.0
margin_right = 420.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.12549, 0.156863, 0.239216, 1 )
text = "identify and shoot the

chord that plays"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Help"]

[node name="Setup" type="HBoxContainer" parent="."]
visible = false
margin_left = 626.21
margin_top = 467.562
margin_right = 980.21
margin_bottom = 535.562
custom_constants/separation = 30
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Set rounds" type="VBoxContainer" parent="Setup"]
margin_right = 124.0
margin_bottom = 68.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="Setup/Set rounds"]
margin_right = 124.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 5 )
text = "rounds"

[node name="UI" type="HBoxContainer" parent="Setup/Set rounds"]
margin_top = 24.0
margin_right = 124.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="subtract" type="TextureButton" parent="Setup/Set rounds/UI"]
margin_left = 56.0
margin_right = 108.0
margin_bottom = 44.0
texture_normal = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="add" type="TextureButton" parent="Setup/Set rounds/UI"]
margin_right = 52.0
margin_bottom = 44.0
texture_normal = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="count" type="Label" parent="Setup/Set rounds/UI"]
margin_left = 112.0
margin_top = 12.0
margin_right = 124.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 5 )
text = "3"

[node name="Set round length" type="VBoxContainer" parent="Setup"]
margin_left = 154.0
margin_right = 354.0
margin_bottom = 68.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="Setup/Set round length"]
margin_right = 200.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 5 )
text = "asteroids per round"

[node name="UI" type="HBoxContainer" parent="Setup/Set round length"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="subtract" type="TextureButton" parent="Setup/Set round length/UI"]
margin_left = 56.0
margin_right = 108.0
margin_bottom = 44.0
texture_normal = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="add" type="TextureButton" parent="Setup/Set round length/UI"]
margin_right = 52.0
margin_bottom = 44.0
texture_normal = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="count" type="Label" parent="Setup/Set round length/UI"]
margin_left = 112.0
margin_top = 12.0
margin_right = 124.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 5 )
text = "5"

[node name="Tween" type="Tween" parent="Setup"]
[connection signal="button_up" from="Buttons/PlayButton" to="." method="_on_PlayButton_button_up"]
[connection signal="button_up" from="Buttons/SetupButton" to="." method="_on_SetupButton_button_up"]
[connection signal="button_up" from="Buttons/HelpButton" to="." method="_on_HelpButton_button_up"]
[connection signal="button_up" from="Buttons/QuitButton" to="." method="_on_QuitButton_button_up"]
[connection signal="pressed" from="Setup/Set rounds/UI/subtract" to="Setup/Set rounds" method="_on_subtract_pressed"]
[connection signal="pressed" from="Setup/Set rounds/UI/add" to="Setup/Set rounds" method="_on_add_pressed"]
[connection signal="pressed" from="Setup/Set round length/UI/subtract" to="Setup/Set round length" method="_on_subtract_pressed"]
[connection signal="pressed" from="Setup/Set round length/UI/add" to="Setup/Set round length" method="_on_add_pressed"]
